--- a/app/views/users/_verifications_list.html.erb
+++ b/app/views/users/_verifications_list.html.erb
@@ -5,12 +5,12 @@
                 <%= link_to 'Telefonnummer', '#', class: 'user-verifications__action-link' %>
 
                 <% if @user.phone_verified? %>
-                    <%= icon 'check-circle', 'Verifisert', class: 'fa-lg u-fill-green' %>
+                    <%= icon 'check-circle', 'Verifisert', class: 'fa-fw u-fill-green' %>
                 <% else %>
                     <%# todo: state when it's sent and waiting for pin to be entered %>
-                    <%= icon 'exclamation-circle', 'Ikke verifisert', class: 'fa-lg u-fill-red' %>
+                    <%= icon 'exclamation-circle', 'Ikke verifisert', class: 'fa-fw u-fill-red' %>
                     <span class="user-verifications__help-link" data-help-label-for="phone">
-                        <%= icon 'info-circle', 'hvorfor?', class: 'fa-lg' %>
+                        <%= icon 'info-circle', 'hvorfor?', class: 'fa-fw' %>
                     </span>
                 <% end %>
 
@@ -24,13 +24,13 @@
                 <%= link_to 'E-post', '#', class: 'user-verifications__action-link' %>
 
                 <% if @user.email_verified? %>
-                    <%= icon 'check-circle', 'Verifisert', class: 'fa-lg u-fill-green' %>
+                    <%= icon 'check-circle', 'Verifisert', class: 'fa-fw u-fill-green' %>
                 <% else %>
                     <%# todo: state when it's sent and waiting for pin to be entered %>
-                    <%= icon 'exclamation-circle ', 'Ikke verifisert', class: 'fa-lg u-fill-red' %>
+                    <%= icon 'exclamation-circle ', 'Ikke verifisert', class: 'fa-fw u-fill-red' %>
 
                     <span class="user-verifications__help-link" data-help-label-for="email">
-                        <%= icon 'info-circle', 'hvorfor?', class: 'fa-lg' %>
+                        <%= icon 'info-circle', 'hvorfor?', class: 'fa-fw' %>
                     </span>
                 <% end %>
 
@@ -56,7 +56,7 @@
                 <% end %>
 
                 <span class="user-verifications__help-link" data-help-label-for="drivers-permit">
-                    <%= icon 'info-circle', 'hvorfor?', class: 'fa-lg' %>
+                    <%= icon 'info-circle', 'hvorfor?', class: 'fa-fw' %>
                 </span>
                 <div class="user-verifications__help u-hidden" data-help-text-for="drivers-permit">
                     Vi trenger bilde av førerkort for at du skal kunne leie motorkjøretøy.
@@ -65,10 +65,10 @@
             </li>
             <li>
                 <%= link_to 'Identitetskort', '#', class: 'user-verifications__action-link' %>
-                <%= icon 'hourglass-half', 'Til kontroll', class: 'fa-lg u-fill-brown' %>
+                <%= icon 'hourglass-half', 'Til kontroll', class: 'fa-fw u-fill-brown' %>
 
                 <span class="user-verifications__help-link" data-help-label-for="id-card">
-                    <%= icon 'info-circle', 'hvorfor?', class: 'fa-lg' %>
+                    <%= icon 'info-circle', 'hvorfor?', class: 'fa-fw' %>
                 </span>
                 <div class="user-verifications__help u-hidden" data-help-text-for="id-card">
                     Dette er påkrevet for å kunne utbetale summer over 20 000,- i året.
@@ -77,9 +77,9 @@
             </li>
             <li>
                 <%= link_to 'Båtførerbevis', '#', class: 'user-verifications__action-link' %>
-                <%= icon 'plus-circle', 'Ikke lastet opp', class: 'fa-lg u-fill-gray' %>
+                <%= icon 'plus-circle', 'Ikke lastet opp', class: 'fa-fw u-fill-gray' %>
                 <span class="user-verifications__help-link" data-help-label-for="boat-permit">
-                    <%= icon 'info-circle', 'hvorfor?', class: 'fa-lg' %>
+                    <%= icon 'info-circle', 'hvorfor?', class: 'fa-fw' %>
                 </span>
 
                 <div class="user-verifications__help u-hidden" data-help-text-for="boat-permit">
