--- a/app/views/shared/_personal_bar.html.erb
+++ b/app/views/shared/_personal_bar.html.erb
@@ -12,9 +12,14 @@
                         { text: 'Annonser',          path: users_ads_path },
                         { text: 'Profil',            path: edit_users_path },
                         { text: 'Forespørsler',      path: bookings_path },
-                        #  BETA: show this link again. { text: 'Leiehistorikk',     path: '#' },
                         { text: 'Favoritter',        path: users_favorite_ads_path },
                     ]
+
+                    unless Plendit::Application.config.x.application_mode.beta
+                        links << { text: 'Leiehistorikk',     path: '#' }
+                        links << { text: 'Betaling',          path: payment_users_path }
+                    end
+
                     links.map { |e| e[:selected] = e[:text].downcase == selected.downcase }
                 %>
 
