Moved privacy box into separate tile

--- a/app/views/users/_verifications_list.html.erb
+++ b/app/views/users/_verifications_list.html.erb
@@ -121,5 +121,9 @@
                 </div>
             </li>
         </ol>
+
+        <%= render partial: 'privacy_box' %>
+
     </div>
+
 <% end %>
