--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -23,6 +23,8 @@ $color-state-green: #135453;
 $color-state-red: #ba1f29;
 $color-state-yellow: #db7917;
 
+$color-privacy-yellow: rgb(252, 248, 227);
+
 $subtle-shadow: 0 1px 5px rgba(black, 0.1);
 
 
