--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -254,3 +254,11 @@
     background-color: white;
     padding: $standard-spacing;
 }
+
+.privacy-box {
+    margin-top: $standard-spacing * 2;
+    padding: $standard-spacing;
+    background-color: $color-privacy-yellow;
+    border: solid thin darken($color-privacy-yellow, 30);
+    font-style: italic;
+}
