--- a/app/views/users/verify_id_card.html.erb
+++ b/app/views/users/verify_id_card.html.erb
@@ -17,13 +17,9 @@
                     Førerkort er et gyldig identitetsbevis.
                 </p>
 
-                <p>
-                    Du kan lese mer om krav til dokumentasjon og hvordan
-                    plendit behandler personlige dokumenter
-                    <%= link_to 'på kundesenteret.', '#' %>
-                </p>
+                <%= render partial: 'privacy_box' %>
 
-                 <%= form_for '', html: { multipart: true } do |f| %>
+                <%= form_for '', html: { multipart: true } do |f| %>
                     <%= f.label :image, 'Last opp bilde av identitetsbevis her:' %>
                     
                     <%= f.file_field :image %>
